feat: search and clean up

--- a/Home page/home.html
+++ b/Home page/home.html
@@ -16,11 +16,7 @@
   <body>
     <section class="banner">
       <a href="./home.html">
-        <img
-          src="./assets/miren-reviews-high-resolution-logo-white-transparent.png"
-          class="logo"
-          alt="logo"
-        />
+        <img src="./assets/miren-reviews-high-resolution-logo-white-transparent.png" class="logo" alt="logo" />
       </a>
       <div class="banner-text">
         <h1>MIREN reviews</h1>
@@ -44,22 +40,14 @@
               </a>
             </li>
             <li>
-              <a href="/Search Result page/results.html" target="_blank"
-                >Search</a
-              >
+              <a href="/Search Result page/results.html">Search</a>
             </li>
             <li><a href="/Hotel Details page/detail.html">Hotels</a></li>
             <li><a href="#">Popular</a></li>
           </div>
           <div class="flex-container gap-2x">
-            <a
-              href="/Login and registration/index.html"
-              class="bg-red fs-300 text-primary-400 px-2py-6 round"
-              >Login</a
-            >
-            <a
-              href="/Login and registration/index.html"
-              class="bg-red fs-300 text-primary-400 px-2py-6 round"
+            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round">Login</a>
+            <a href="/Login and registration/index.html" class="bg-red fs-300 text-primary-400 px-2py-6 round"
               >Sign Up</a
             >
           </div>
@@ -70,48 +58,40 @@
           <h1>Find your perfect hotel with Miren</h1>
           <p>Over 1 million rooms worldwide are waiting for you!</p>
         </div>
-        <form action="../Search Result page/results.html" method="get">
+        <form action="http://localhost:3000/hotels" method="get" class="form">
           <div class="form-child">
             <label for="location">Location</label>
-            <input
-              type="text"
-              name="location"
-              id="location"
-              placeholder="Where do you wanna go?"
-            />
+            <input type="text" name="hotel_location" id="location" placeholder="Where do you wanna go?" required />
           </div>
           <div class="form-child">
             <label for="check-in">Check-in date</label>
             <input
               type="text"
               name="checkIn"
-              id="check-in"
+              id="hotel_check-in"
               placeholder="dd/mm/yyyy"
               pattern="(\d{2}\/(0[1-9]|1[0-2])\/\d{4})"
+              required
             />
           </div>
           <div class="form-child">
             <label for="check-out">Check-Out date</label>
             <input
               type="text"
-              name="checkOut"
+              name="hotel_checkOut"
               id="check-out"
               placeholder="dd/mm/yyyy"
               pattern="(\d{2}\/(0[1-9]|1[0-2])\/\d{4})"
+              required
             />
           </div>
           <div class="form-child">
             <label for="guests">Number of guests</label>
-            <input
-              type="number"
-              name="guests"
-              id="guests"
-              placeholder="Enter number of guests"
-            />
+            <input type="number" name="guests" id="guests" placeholder="Enter number of guests" />
           </div>
           <div class="form-child">
             <label for="search" aria-hidden="true">Search</label>
-            <button class="bg-red btn" id="search">
+            <button class="bg-red btn searchBtn" id="search">
               <img src="./assets/images/MiArrowRight.svg" alt="search" />
             </button>
           </div>
@@ -122,53 +102,29 @@
           <h2 class="my-4 fs-400">Explore popular destinations</h2>
           <div class="grid-container grid-2x4 gap-1x">
             <div class="grid-item-1 relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/redd-f-nTBW1cOY1qI-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/redd-f-nTBW1cOY1qI-unsplash.jpg" alt="" />
               <div class="faded-box">
                 <span class="faded-box absolute bottom-left fs-200">Paris</span>
               </div>
             </div>
             <div class="relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/aurelien-romain-zHth1uFXV6I-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/aurelien-romain-zHth1uFXV6I-unsplash.jpg" alt="" />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="grid-item-3 relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/jason-leung-yux412uKpG0-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/jason-leung-yux412uKpG0-unsplash.jpg" alt="" />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/gaddafi-rusli-2ueUnL4CkV8-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/gaddafi-rusli-2ueUnL4CkV8-unsplash.jpg" alt="" />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/jonathan-chng-7_WyzplsaSE-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/jonathan-chng-7_WyzplsaSE-unsplash.jpg" alt="" />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
             <div class="relative">
-              <img
-                class="card-img"
-                src="./assets/images/small/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg"
-                alt=""
-              />
+              <img class="card-img" src="./assets/images/small/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg" alt="" />
               <span class="faded-box absolute bottom-left fs-200">Paris</span>
             </div>
           </div>
@@ -178,11 +134,7 @@
           <div class="flex-container gap-1x">
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img
-                  class="img"
-                  src="./assets/images/visualsofdana-T5pL6ciEn-I-unsplash.jpg"
-                  alt=""
-                />
+                <img class="img" src="./assets/images/visualsofdana-T5pL6ciEn-I-unsplash.jpg" alt="" />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -197,17 +149,12 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img
-                  class="img"
-                  src="./assets/images/rooms/huy-nguyen-mVLMZiILyxM-unsplash.jpg"
-                  alt=""
-                />
+                <img class="img" src="./assets/images/rooms/huy-nguyen-mVLMZiILyxM-unsplash.jpg" alt="" />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -222,8 +169,7 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
@@ -247,8 +193,7 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
@@ -272,17 +217,12 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img
-                  class="img"
-                  src="./assets/images/rooms/sasha-kaunas-67-sOi7mVIk-unsplash.jpg"
-                  alt=""
-                />
+                <img class="img" src="./assets/images/rooms/sasha-kaunas-67-sOi7mVIk-unsplash.jpg" alt="" />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -297,17 +237,12 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
             <div class="flex-col card bg-offwhite">
               <div class="relative">
-                <img
-                  class="img"
-                  src="./assets/images/rooms/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg"
-                  alt=""
-                />
+                <img class="img" src="./assets/images/rooms/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" alt="" />
                 <div class="top absolute flex-container">
                   <p class="bg-red fs-200 text-primary-400">9.5</p>
                   <svg class="heart" xmlns="http://www.w3.org/2000/svg">
@@ -322,8 +257,7 @@
               <p class="fs-200">London</p>
               <a class="card-link fs-200" href="/Hotel Details page/detail.html"
                 >Starting form $130/night
-                <span class="card-arrow"
-                  ><img src="./assets/images/MiChevronRight.svg" alt="" /></span
+                <span class="card-arrow"><img src="./assets/images/MiChevronRight.svg" alt="" /></span
               ></a>
             </div>
           </div>
@@ -334,8 +268,8 @@
             <div>
               <h3 class="fw-bold">Exclusive Offer!</h3>
               <p class="fs-300">
-                Want to receive exclusive offers and the best prices for your
-                dream stays? Sign up now to join our Travel Club!
+                Want to receive exclusive offers and the best prices for your dream stays? Sign up now to join our
+                Travel Club!
               </p>
             </div>
           </div>
@@ -356,14 +290,12 @@
             <li><a href="/FAQ section/faq.html" target="_blank">FAQ</a></li>
             <li><a href="#">Contact</a></li>
             <li>
-              <a href="/About Us section/about.html" target="_blank"
-                >About US</a
-              >
+              <a href="/About Us section/about.html" target="_blank">About US</a>
             </li>
           </ul>
         </div>
       </footer>
     </div>
   </body>
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js" type="module"></script>
 </html>
