--- a/Login and registration/index.html
+++ b/Login and registration/index.html
@@ -11,33 +11,96 @@
       <div class="form-box">
         <div class="button-box">
           <div id="btn"></div>
-          <button type="button" class="toggle-btn" onclick="login()">Log In</button>
-          <button type="button" class="toggle-btn" onclick="register()">Register</button>
+          <button type="button" class="toggle-btn" onclick="login()">
+            Log In
+          </button>
+          <button type="button" class="toggle-btn" onclick="register()">
+            Register
+          </button>
         </div>
         <div class="social-icons">
           <img src="images/google.svg" alt="" />
           <img src="images/facebook.svg" alt="" />
           <img src="images/x-twitter.svg" alt="" />
         </div>
-        <form action="login.php" method="get" class="input-group" id="login-form">
-          <input type="text" id="login-username" class="input-field" placeholder="Enter username" required />
-          <input type="password" id="login-password" class="input-field" placeholder="Enter Password" required />
-          <input type="checkbox" class="check-box" /> <span>Remember password</span>
+        <form
+          action="login.php"
+          method="post"
+          class="input-group"
+          id="login-form"
+        >
+          <input
+            type="text"
+            id="login-username"
+            name="login-username"
+            class="input-field"
+            placeholder="Enter username"
+            required
+          />
+          <input
+            type="password"
+            id="login-password"
+            name="login-password"
+            class="input-field"
+            placeholder="Enter Password"
+            required
+          />
+          <input type="checkbox" class="check-box" />
+          <span>Remember password</span>
           <button type="submit" class="submit-btn">Log In</button>
         </form>
 
-        <form action="register.php" method="get" class="input-group" id="register-form">
-          <a href="../Hotel Data Enrtry Form/index.html">If you're a hotel click here</a>
-          <input type="text" id="register-username" class="input-field" placeholder="Enter username" required />
-          <input type="email" id="register-email" class="input-field" placeholder="Enter email" required />
-          <input type="password" id="register-password" class="input-field" placeholder="Enter Password" required />
-          <input type="password" id="confirm-password" class="input-field" placeholder="Confirm Password" required />
+        <form
+          action="register.php"
+          method="post"
+          class="input-group"
+          id="register-form"
+          name="register-form"
+        >
+          <a href="../Hotel Data Enrtry Form/index.html"
+            >If you're a hotel click here</a
+          >
+          <input
+            type="text"
+            id="register-username"
+            name="register-username"
+            class="input-field"
+            placeholder="Enter username"
+            required
+          />
+          <input
+            type="email"
+            id="register-email"
+            name="register-email"
+            class="input-field"
+            placeholder="Enter email"
+            required
+          />
+          <input
+            type="password"
+            id="register-password"
+            name="register-password"
+            class="input-field"
+            placeholder="Enter Password"
+            required
+          />
+          <input
+            type="password"
+            id="confirm-password"
+            name="confirm-password"
+            class="input-field"
+            placeholder="Confirm Password"
+            required
+          />
           <input type="checkbox" id="agree-checkbox" class="check-box" />
           <span>I agree to the terms and condition</span>
-          <button type="submit" class="submit-btn">Register</button>
+          <button type="submit" class="submit-btn" name="register>Register</button>
         </form>
 
-        <div id="success-message" style="display: none; color: green; margin-top: 10px">
+        <div
+          id="success-message"
+          style="display: none; color: green; margin-top: 10px"
+        >
           Registration successful! You can now log in.
         </div>
       </div>
